# agentic-auth

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  security.yml
apps/agent-access-gateway/: Cargo.toml
apps/agent-access-gateway/src/: main.rs
apps/briefcase-cli/: Cargo.toml
apps/briefcase-cli/src/: main.rs
apps/briefcase-extension/: package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/briefcase-extension/e2e/: popup.spec.ts
apps/briefcase-extension/extension/: manifest.json  popup.css  popup.html
apps/briefcase-extension/src/: index.ts  manifest.spec.ts  openapi.spec.ts
apps/briefcase-extension/src/extension/: background.ts  popup.ts
apps/briefcase-mobile-signer/android/app/: build.gradle.kts
apps/briefcase-mobile-signer/ios/: project.yml
apps/briefcase-payment-helper/: Cargo.toml
apps/briefcase-payment-helper/src/: main.rs
apps/briefcase-ui/: Cargo.toml
apps/briefcase-ui/src/: main.rs
apps/briefcased/: Cargo.toml
apps/briefcased/src/: app.rs  db.rs  dpop.rs  main.rs  middleware.rs  pairing.rs  policy_compiler.rs  provider.rs  remote_mcp.rs  tools.rs
apps/mcp-gateway/: Cargo.toml
apps/mcp-gateway/src/: main.rs
apps/native-messaging-host/: Cargo.toml
apps/native-messaging-host/src/: lib.rs
apps/native-messaging-host/tests/: host_e2e_unix.rs
crates/briefcase-ai/: Cargo.toml
crates/briefcase-ai/src/: lib.rs
crates/briefcase-api/: Cargo.toml
crates/briefcase-api/src/: client.rs  lib.rs  types.rs
crates/briefcase-core/: Cargo.toml
crates/briefcase-core/src/: lib.rs  sensitive.rs  types.rs  util.rs
crates/briefcase-identity/: Cargo.toml
crates/briefcase-identity/src/: lib.rs
crates/briefcase-keys/: Cargo.toml
crates/briefcase-keys/src/: apple.rs  lib.rs  pkcs11.rs  tpm2.rs
crates/briefcase-keys/tests/: apple_keychain.rs  pkcs11_softhsm.rs
crates/briefcase-mcp/src/: http_client.rs  lib.rs
crates/briefcase-oauth-discovery/src/: lib.rs
crates/briefcase-payments/: Cargo.toml
crates/briefcase-payments/src/: helper_protocol.rs  lib.rs  x402.rs
crates/briefcase-policy/: Cargo.toml
crates/briefcase-policy/src/: cedar_engine.rs  lib.rs
crates/briefcase-receipts/: Cargo.toml
crates/briefcase-receipts/src/: lib.rs  store.rs
crates/briefcase-revocation/: Cargo.toml
crates/briefcase-revocation/src/: lib.rs
crates/briefcase-risk/: Cargo.toml
crates/briefcase-risk/src/: lib.rs
crates/briefcase-secrets/: Cargo.toml
crates/briefcase-secrets/src/: file_store.rs  keyring_store.rs  lib.rs  memory_store.rs  types.rs
docker/lightning-regtest/: run-tests.sh
docker/softhsm/: Dockerfile  run-tests.sh
docker/swtpm/: run-tests.sh
docker/x402-harness/: Dockerfile  run-tests.sh
docs/: AI_SAFETY.md  ARCHITECTURE.md  CAPABILITY_TOKENS.md  PAIRING.md  POLICY.md  RELEASING.md  THREAT_MODEL.md
openapi/: briefcased.yaml
packaging/: README.md
packaging/launchd/: com.briefcase.briefcased.plist
packaging/systemd/: briefcased.service
scripts/: ga_qualification.sh
specs/: .current-spec
specs/portable-briefcase-sop-full/: .progress.md  tasks.md
specs/portable-briefcase-v1/: .progress.md  design.md  requirements.md  research.md  tasks.md
tests/signer_sim/: sim.rs
