[package]
name = "briefcase-payment-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
briefcase-payments = { path = "../../crates/briefcase-payments" }
clap.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
