[package]
name = "native-messaging-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

briefcase-api = { path = "../../crates/briefcase-api" }

[dev-dependencies]
axum.workspace = true
chrono.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

briefcase-core = { path = "../../crates/briefcase-core" }
