[package]
name = "briefcase-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dependencies.briefcase-core]
path = "../briefcase-core"

[dev-dependencies]
tokio.workspace = true
