[package]
name = "briefcase-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bs58.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true

