[package]
name = "briefcase-receipts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rusqlite.workspace = true

briefcase-core = { path = "../briefcase-core" }

[dev-dependencies]
tempfile.workspace = true
