[package]
name = "briefcase-revocation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
