[package]
name = "briefcase-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
base64.workspace = true
keyring.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

briefcase-core = { path = "../briefcase-core" }

[dev-dependencies]
tempfile.workspace = true
